Bugfix: fixed main menu doesn't stretch across the entire viewport
The fixed positioned container didn't have a width or left declaration
so it didn't extend from border to border.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -281,6 +281,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 	position: fixed;
 	top: 0;
 	right: 0;
+	left: 0;
 }
 
 /*
